Fixed bug that caused stop button to move lower on mobile

--- a/breathe.css
+++ b/breathe.css
@@ -78,7 +78,7 @@
 
 .customslider{
     accent-color: gray;
-    width:100px;
+    width:10rem;
 }
 
 #customization{
@@ -89,6 +89,6 @@
 }
 
 #numcycles{
-    width: 125px;
+    width: 10rem;
 }
 
